--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Git hub</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -23,9 +25,24 @@
     </header>
 
     <main>
-        
+        <section class="Asilbek">
+            <div class="container">
+                <div class="asilbek__user">
+                    <img src="https://avatars.mds.yandex.net/i?id=9919d00e915b1d575e8a00469a856d17-5523440-images-thumbs&n=13" alt="">
+                   <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum amet a ipsum odit. Earum accusantium
+                    nobis quos fugiat est cum omnis molestias. Autem magni hic aut dolore impedit quo deleniti harum
+                    dicta quam, facere sed labore? Dolore placeat soluta, inventore, odio eligendi aliquam vero ab
+                    fugiat non doloremque a animi, praesentium veniam quaerat dolorem cum in. Harum cumque eos,
+                    asperiores qui, sunt nesciunt sequi laudantium, architecto temporibus esse aut. Voluptatem non quos,
+                    ullam quod excepturi repellendus similique, et beatae, animi eaque voluptatibus? Incidunt similique
+                    reiciendis magnam laboriosam dolore inventore, qui est repellendus et ex tenetur a sed
+                    necessitatibus mollitia quae?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
 
 </body>
+
 </html>
